@@ -12,30 +12,36 @@ RSpec.describe Kiba::Extend::Transforms::Append::ConvertedValueAndUnit do
       { value: nil, unit: nil },
       { value: '1.5', unit: nil },
       { value: '1.5', unit: 'inches' },
+      { value: '1.5', unit: 'in.' },
+      { value: '5', unit: 'centimeters'},
       { value: '2', unit: 'feet' },
+      { value: '2', unit: 'meters' },
       { value: '2', unit: 'pounds' },
-      { value: '2', unit: 'ounces' }
+      { value: '2', unit: 'kilograms' },
+      { value: '2', unit: 'ounces' },
+      { value: '200', unit: 'grams' }
     ]
   end
 
   let(:transforms) do
     Kiba.job_segment do
-      transform Append::ConvertedValueAndUnit,
-        value: :value,
-        unit: :unit,
-        delim: '|',
-        places: 2
+      transform Append::ConvertedValueAndUnit, value: :value, unit: :unit, delim: '|', places: 2
     end
   end
 
   let(:expected) do
     [
-      { value: nil, unit: nil },
-      { value: '1.5', unit: nil },
+      {value: nil, unit: nil },
+      {value: '1.5', unit: nil },
       {value: '1.5|3.81', unit: 'inches|centimeters'},
+      {value: '1.5|3.81', unit: 'in.|centimeters'},
+      {value: '5|1.97', unit: 'centimeters|inches'},
       {value: '2|0.61', unit: 'feet|meters'},
+      { value: '2|6.56', unit: 'meters|feet' },      
       {value: '2|0.91', unit: 'pounds|kilograms'},
+      { value: '2|4.41', unit: 'kilograms|pounds' },
       {value: '2|56.7', unit: 'ounces|grams'},
+      { value: '200|7.05', unit: 'grams|ounces' }      
     ]
   end
   
@@ -43,10 +49,168 @@ RSpec.describe Kiba::Extend::Transforms::Append::ConvertedValueAndUnit do
     expect(result).to eq(expected)
   end
 
-  context 'when unit type is unknown' do
+  context 'when value or unit is multivalued' do
     let(:input) do
       [
-        { value: '1', unit: 'step' }
+        { value: '12|1', unit: 'inches|feet' },
+        { value: '12|1', unit: 'inches' },
+        { value: '12', unit: 'inches|feet' }
+      ]
+    end
+
+    let(:expected) do
+      [
+        { value: '12|1', unit: 'inches|feet' },
+        { value: '12|1', unit: 'inches' },
+        { value: '12', unit: 'inches|feet' }
+      ]
+    end
+    
+    it 'returns original rows' do
+      expect(result).to eq(expected)
+    end
+  end
+
+  context 'when value contains string fraction' do
+    let(:input) do
+      [
+        { value: '1 1/2', unit: 'inches' }
+      ]
+    end
+
+    let(:expected) do
+      [
+        { value: '1 1/2', unit: 'inches' }
+      ]
+    end
+    
+    it 'returns original rows' do
+      expect(result).to eq(expected)
+    end
+  end
+
+  context 'when unit alias known by Measured is given and conversion customized' do
+    let(:input) do
+      [
+        { value: '36', unit: 'in.' }
+      ]
+    end
+
+    let(:transforms) do
+      Kiba.job_segment do
+        transform Append::ConvertedValueAndUnit,
+          value: :value,
+          unit: :unit,
+          delim: '|',
+          places: 2,
+          conversions: {'inches'=>'feet'}
+      end
+    end
+
+    let(:expected) do
+      [
+        { value: '36|3', unit: 'in.|feet' }
+      ]
+    end
+    
+    it 'adds value and unit without requiring custom parameters' do
+      expect(result).to eq(expected)
+    end
+  end
+
+  context 'when default conversion is overridden' do
+    let(:input) do
+      [
+        { value: '36', unit: 'inches' }
+      ]
+    end
+
+    let(:transforms) do
+      Kiba.job_segment do
+        transform Append::ConvertedValueAndUnit,
+          value: :value,
+          unit: :unit,
+          delim: '|',
+          places: 2,
+          conversions: {'inches'=>'feet'}
+      end
+    end
+
+    let(:expected) do
+      [
+        { value: '36|3', unit: 'inches|feet' }
+      ]
+    end
+    
+    it 'adds value and unit' do
+      expect(result).to eq(expected)
+    end
+  end
+
+  context 'when default converted unit name is overridden' do
+    let(:input) do
+      [
+        { value: '36', unit: 'inches' }
+      ]
+    end
+
+    let(:transforms) do
+      Kiba.job_segment do
+        transform Append::ConvertedValueAndUnit,
+          value: :value,
+          unit: :unit,
+          delim: '|',
+          places: 2,
+          unit_names: {'centimeters'=>'cm'}
+      end
+    end
+
+    let(:expected) do
+      [
+        { value: '36|91.44', unit: 'inches|cm' }
+      ]
+    end
+    
+    it 'adds value and unit' do
+      expect(result).to eq(expected)
+    end
+  end
+  
+  context 'when using Measured unit not configured for transform' do
+    let(:input) do
+      [
+        { value: '1', unit: 'yard' },
+        { value: '36', unit: 'inches' },
+      ]
+    end
+
+    let(:transforms) do
+      Kiba.job_segment do
+        transform Append::ConvertedValueAndUnit,
+          value: :value,
+          unit: :unit,
+          delim: '|',
+          places: 2,
+          conversions: {'inches'=>'yards', 'yards'=>'feet'}
+      end
+    end
+
+    let(:expected) do
+      [
+        { value: '1|3', unit: 'yard|feet' },
+        { value: '36|1', unit: 'inches|yd' },
+      ]
+    end
+    
+    it 'adds value and unit' do
+      expect(result).to eq(expected)
+    end
+  end
+
+  context 'when unit conversion is unknown' do
+    let(:input) do
+      [
+        { value: '1', unit: 'yard' }
       ]
     end
 
@@ -62,7 +226,7 @@ RSpec.describe Kiba::Extend::Transforms::Append::ConvertedValueAndUnit do
 
     let(:expected) do
       [
-        { value: '1', unit: 'step' }
+        { value: '1', unit: 'yard' }
       ]
     end
     
@@ -71,15 +235,15 @@ RSpec.describe Kiba::Extend::Transforms::Append::ConvertedValueAndUnit do
     end
 
     it 'prints warning to STDOUT' do
-      msg = %Q[KIBA WARNING: Unknown unit type "step" in "unit" field. Configure types parameter\n]
+      msg = %Q[KIBA WARNING: Unknown conversion to perform for "yard" in "unit" field. Configure conversions parameter\n]
       expect{ result }.to output(msg).to_stdout
     end
   end
 
-  context 'when unit conversion is unknown' do
+  context 'when unit conversion is unconvertable' do
     let(:input) do
       [
-        { value: '1', unit: 'step' }
+        { value: '2', unit: 'inches' }
       ]
     end
 
@@ -90,13 +254,13 @@ RSpec.describe Kiba::Extend::Transforms::Append::ConvertedValueAndUnit do
           unit: :unit,
           delim: '|',
           places: 2,
-          types: {'step' => Measured::Length}
+          conversions: {'inches'=>'grams'}
       end
     end
 
     let(:expected) do
       [
-        { value: '1', unit: 'step' }
+        { value: '2', unit: 'inches' }
       ]
     end
     
@@ -105,12 +269,12 @@ RSpec.describe Kiba::Extend::Transforms::Append::ConvertedValueAndUnit do
     end
 
     it 'prints warning to STDOUT' do
-      msg = %Q[KIBA WARNING: Unknown conversion to perform for "step" in "unit" field. Configure conversions parameter\n]
+      msg = %Q[KIBA WARNING: "inches" cannot be converted to "grams". Check your conversions parameter or configure a custom conversion_amounts parameter\n]
       expect{ result }.to output(msg).to_stdout
     end
   end
 
-  context 'when unit conversion amount not configured' do
+  context 'when unknown unit not configured' do
     let(:input) do
       [
         { value: '1', unit: 'step' }
@@ -124,7 +288,6 @@ RSpec.describe Kiba::Extend::Transforms::Append::ConvertedValueAndUnit do
           unit: :unit,
           delim: '|',
           places: 2,
-          types: {'step' => Measured::Length},
           conversions: {'step' => 'feet'}
       end
     end
@@ -140,7 +303,7 @@ RSpec.describe Kiba::Extend::Transforms::Append::ConvertedValueAndUnit do
     end
 
     it 'prints warning to STDOUT' do
-      msg = %Q[KIBA WARNING: No known conversion method for "step" to "feet" in "unit" field. Configure conversion_amounts parameter\n]
+      msg = %Q[KIBA WARNING: Unknown unit "step" in "unit" field. You may need to configure a custom unit. See example 3 in transform documentation\n]
       expect{ result }.to output(msg).to_stdout
     end
   end
@@ -148,7 +311,8 @@ RSpec.describe Kiba::Extend::Transforms::Append::ConvertedValueAndUnit do
   context 'when custom unit conversion configured' do
     let(:input) do
       [
-        { value: '1', unit: 'steps' }
+        { value: '4', unit: 'hops' },
+        { value: '15', unit: 'leaps'}
       ]
     end
 
@@ -159,17 +323,18 @@ RSpec.describe Kiba::Extend::Transforms::Append::ConvertedValueAndUnit do
           unit: :unit,
           delim: '|',
           places: 2,
-          types: {'steps' => Measured::Length},
-          conversions: {'steps' => 'feet'},
+          conversions: {'hops'=>'jumps', 'leaps'=>'hops'},
           conversion_amounts: {
-            steps: [2.5, :feet]
+            leaps: [10, :hops],
+            hops: [0.25, :jumps]
           }
       end
     end
 
     let(:expected) do
       [
-        { value: '1|2.5', unit: 'steps|feet' }
+        { value: '4|1', unit: 'hops|jumps' },
+        { value: '15|150', unit: 'leaps|hops'}
       ]
     end
 
